completed ifps update and did some testing, need to test on production build - goerli network

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 ESLINT_NO_DEV_ERRORS=true
+
+NEXT_PUBLIC_IPFS_PROJECT_ID=2GasWJjCj24zeVa34IdST3lq95u
+NEXT_PUBLIC_API_KEY_SECRET=73499efe0f167b48a0d34b05087e7be7
