--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "2.0.5",
     "@nomiclabs/hardhat-waffle": "2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
     "axios": "0.26.0",
-    "ethers": "5.5.4",
-    "hardhat": "^2.12.0",
-    "ipfs-http-client": "56.0.1",
+    "ipfs-http-client": "^56.0.1",
     "next": "12.1.0",
     "next-themes": "0.1.1",
     "react": "17.0.2",
@@ -24,7 +21,17 @@
     "web3modal": "1.9.5"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.1",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.3",
     "autoprefixer": "10.4.2",
+    "chai": "^4.3.6",
     "eslint": "^8.25.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.0",
@@ -32,7 +39,12 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.0",
+    "hardhat-gas-reporter": "^1.0.9",
     "postcss": "8.4.7",
-    "tailwindcss": "3.0.23"
+    "solidity-coverage": "^0.8.2",
+    "tailwindcss": "3.0.23",
+    "typechain": "^8.1.0"
   }
 }
