--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@nomiclabs/hardhat-waffle": "2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
     "axios": "0.26.0",
