--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ ESLINT_NO_DEV_ERRORS=true
 
 NEXT_PUBLIC_IPFS_PROJECT_ID=2GasWJjCj24zeVa34IdST3lq95u
 NEXT_PUBLIC_API_KEY_SECRET=73499efe0f167b48a0d34b05087e7be7
+
+NEXT_PUBLIC_API_URL_ALCHEMY=https://polygon-mumbai.g.alchemy.com/v2/lNcHZ_RBw32YgkLah5Dtl9tfeWYiZVSj
