--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@nomiclabs/hardhat-waffle": "2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "alchemy-sdk": "^2.2.0",
     "axios": "0.26.0",
+    "dotenv": "^16.0.3",
     "ipfs-http-client": "^56.0.1",
     "next": "12.1.0",
     "next-themes": "0.1.1",
